# go2-rebot

./: .gitignore  .gitmodules  go2-rebot.service  headless-start.sh  install-service.sh  logs.sh  pyproject.toml  start.sh  stop.sh
config/: arm.yaml  gripper.yaml
docs/: README.md
recordings/: test_20260423_094213.csv  test_20260423_094354.csv  test_20260423_095641.csv  test_20260423_095702.csv  test_20260423_095828.csv  test_20260423_095907.csv  test_20260423_095947.csv  test_20260423_100124.csv  test_20260423_100508.csv  test_20260423_100734.csv
src/go2_rebot/: __init__.py  arm_cli.py  arm_control.py  cli.py  safety.py
