[project]
name = "go2-rebot"
version = "0.1.0"
description = "Xbox controller bridge for the Unitree Go2 robot dog"
requires-python = ">=3.12"
dependencies = [
    "go2-driver",
    "evdev",
    "numpy",
    "motorbridge",
    "pyyaml",
]

[project.scripts]
go2-rebot = "go2_rebot.cli:main"
go2-rebot-arm = "go2_rebot.arm_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/go2_rebot"]

[tool.uv.sources]
go2-driver = { path = "go2-driver", editable = true }
